# cleanup-robot

./: .gitmodules  .travis.yml  Doxyfile  README.md
BashScripts/: check_cppcheck.sh  check_cpplint.sh  run_ci.sh
cleanup_robot/: CMakeLists.txt  package.xml
controller/: CMakeLists.txt  package.xml  plugin_description.xml
controller/action/: SetMode.action
controller/include/controller/: controller.h  user_panel.h
controller/launch/: cleanup.launch  controller.rviz
controller/src/: controller.cpp  controller_node.cpp  user_panel.cpp  user_panel.h
controller/test/: controller_test.cpp  controller_test.launch
docs/doxygen/html/: activation__layer_8h_source.html  activations_8h_source.html  annotated.html  avgpool__layer_8h_source.html  batchnorm__layer_8h_source.html  blas_8h_source.html  box_8h_source.html  classcleanup_1_1_controller-members.html  classcleanup_1_1_controller.html  classcleanup_1_1_navigation-members.html  classcleanup_1_1_navigation.html  classcleanup_1_1_perception-members.html  classcleanup_1_1_perception.html  classcleanup_1_1_user_panel-members.html  classcleanup_1_1_user_panel.html  classcleanup_1_1_user_panel__coll__graph.md5  classcleanup_1_1_user_panel__inherit__graph.map  classcleanup_1_1_user_panel__inherit__graph.md5  classes.html  classifier_8h_source.html  col2im_8h_source.html  connected__layer_8h_source.html  controller_8cpp.html  controller_8cpp__incl.map  controller_8cpp__incl.md5  controller_8h.html  controller_8h__dep__incl.map  controller_8h__dep__incl.md5  controller_8h__incl.map  controller_8h__incl.md5  controller_8h_source.html  controller__node_8cpp.html  controller__node_8cpp__incl.map  controller__node_8cpp__incl.md5  controller__test_8cpp.html  controller__test_8cpp__incl.map  controller__test_8cpp__incl.md5  convolutional__layer_8h_source.html  cost__layer_8h_source.html  crnn__layer_8h_source.html  (+198 more)
docs/doxygen/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_7.js  classes_8.js  classes_9.js  classes_c.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js
docs/doxygen/latex/: annotated.tex  classcleanup_1_1_controller.tex  classcleanup_1_1_navigation.tex  classcleanup_1_1_perception.tex  classcleanup_1_1_user_panel.tex  classcleanup_1_1_user_panel__coll__graph.md5  classcleanup_1_1_user_panel__inherit__graph.md5  controller_8cpp.tex  controller_8cpp__incl.md5  controller_8h.tex  controller_8h__dep__incl.md5  controller_8h__incl.md5  controller__node_8cpp.tex  controller__node_8cpp__incl.md5  controller__test_8cpp.tex  controller__test_8cpp__incl.md5  dir_030212011b561ce18e58a5cce4fc9712.tex  dir_07e97e2670e0181fb537a4b8f505805f.tex  dir_0b61903d8d88e490a99a17d8bbe6dd4b.tex  dir_0ca7c2f0f8b7abeab5df1aa8693a0b2b.tex  dir_0f31f5212231d2a7371bcf069693955d.tex  dir_2d073b2d4d82477b15c6eeb349ca297f.tex  dir_3fcf6a7c5f1992d8a5e5b58324b8b7ba.tex  dir_44d1ea3f671006996fd4d3eef4154183.tex  dir_49e68af5740c4c95efaf3b3fa8d403fd.tex  dir_55e3a2fb848a50aee2942e39d7de8851.tex  dir_573a3341c1d30d2e46cbd6000938a2b2.tex  dir_6fffe7863a7537851b5aab9e8eaa30bb.tex  dir_76f1a8a718aeeb93fae325e26ae548e4.tex  dir_849cd292ca516aae5c91dd30490094a3.tex  dir_85916f0b90164c3695644f7c783d5aff.tex  dir_87435ba639dfb8f1c5891c780874a1e2.tex  dir_87435ba639dfb8f1c5891c780874a1e2_dep.md5  dir_9f7440d55d9882960387d01d366c3a0f.tex  dir_ab71b2fd10beab8d8d59e7f14420961f.tex  dir_ab71b2fd10beab8d8d59e7f14420961f_dep.md5  dir_af91c650382c3c2d2f01da74dcc57502.tex  dir_afd36b3669a358b9e8ba2cee68057da4.tex  dir_b5263ef7fdbf3bb04993d88864c54361.tex  dir_d3bff1ab3a40b4e5d0775c67ace1b0da.tex  (+46 more)
docs/uml/: activity_diagram.txt  class_diagram.txt  clean_behavior.txt  controller_activity.txt  sequence_diagram.txt
docs/uml/initial/: class_diagram.txt  explore_behavior.txt
docs/uml/revised/: class_diagram.txt  explore_behavior.txt  sequence_diagram.txt
navigation/: CMakeLists.txt  package.xml
navigation/include/navigation/: navigation.h
navigation/launch/: navigation.launch
navigation/src/: navigation.cpp  navigation_node.cpp
navigation/test/: navigation.test  navigation_test.bag  navigation_test.cpp  navigation_test.launch
perception/: CMakeLists.txt  package.xml
perception/include/perception/: matrixf.hpp  perception.h  yolo_ros.hpp
perception/launch/: darknet.launch  perception.launch
perception/msg/: ObjectLocation.msg  ObjectLocations.msg
perception/src/: matrixf.cpp  perception.cpp  perception_node.cpp  yolo_ros.cpp
perception/test/: perception_test.cpp  perception_test.launch
simulation/: package.xml
test/: controller.cpp  navigation.cpp  perception.cpp
