<?xml version="1.0"?>
<package format="2">
  <name>controller</name>
  <version>0.0.1</version>
  <description>The Cleanup Robot controller package</description>
  <maintainer email="danielmohansahu@gmail.com">Daniel M. Sahu</maintainer>

  <license>MIT</license>

  <depend>roscpp</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
