<?xml version="1.0"?>
<package format="2">
  <name>controller</name>
  <version>0.0.1</version>
  <description>The Cleanup Robot controller package</description>
  <maintainer email="danielmohansahu@gmail.com">Daniel M. Sahu</maintainer>

  <license>MIT</license>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz</exec_depend>

  <depend>roscpp</depend>
  <depend>navigation</depend>
  <depend>perception</depend>
  <depend>genmsg</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
