<?xml version="1.0"?>
<package format="2">
  <name>perception</name>
  <version>0.0.1</version>
  <description>The Cleanup Robot navigation package</description>
  <maintainer email="santosh@todo.todo">Santosh Kesani</maintainer>

  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
